--- a/common.css
+++ b/common.css
@@ -1,3 +1,10 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif, monospace;
+}
+
 :root {
     --homebg: rgb(210, 233, 241);
     --text: white;
@@ -6,7 +13,6 @@
     --headerbg: black;
     --btnbg: rgb(80, 80, 188);
     --displaycolor: aliceblue;
-
 }
 
 body {
@@ -120,7 +126,7 @@ body.dark {
     color: var(--text);
 }
 
-footer nav ul {
+.footer nav ul {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -135,5 +141,92 @@ footer nav ul {
 
 .footer nav ul li a {
     text-decoration: none;
+
+}
+
+
+
+@media (max-width:695px) {
+
+
+
+    .Home {
+        height: fit-content;
+    }
+
+    :root {
+        --color: rgb(231, 227, 227);
+
+    }
+
+
+    /* For Header  */
+
+    .leftHeader h1 {
+        font-size: 20px;
+    }
+
+
+    .midHeader nav ul {
+        display: none;
+    }
+
+    .midHeader .navBar {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 89px;
+        left: 0;
+        padding: 4px 6px;
+        width: 100%;
+        gap: 8px;
+        background-color: var(--homebg);
+    }
+
+    .midHeader .navBar li {
+        padding: 10px;
+        font-size: 20px;
+        background-color: var(--color);
+        border-radius: 8px;
+    }
+
+    .menu_icon {
+        display: block;
+
+    }
+
+    .rightHeader {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .display {
+        margin: 0 34px;
+    }
+
+    .degree img {
+        height: 10vh;
+        width: 10vw;
+    }
+
+    .footer nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 85px;
+    /* margin-top: 40px; */
+}
+
+
+/* .footer nav ul li {
+    list-style: none;
+    font-weight: bold;
+}
+
+.footer nav ul li a {
+    text-decoration: none;
+
+} */
 
 }
